--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file: .env
-    command: go run app/REST_API_example
+    command: go run main/repo.go
     volumes:
       - .:/go/src/github.com/bondarenkoi07/REST_API_example
     ports:
