--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build the stack
         run: docker-compose -f docker-compose.yml up -d --build
+      - name: Test
+        run: docker-compose exec web go test ./...
